--- a/ooch_bot/package.json
+++ b/ooch_bot/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.25.2",
-    "discord.js": "^13.12.0",
+    "discord.js": "^14.7.1",
     "enmap": "^5.8.7",
     "eslint": "^8.17.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.7",
     "wait": "^0.4.2"
+  },
+  "compilerOptions": {
+    "allowJs": true,
+    "checkJs": false
   }
 }
