--- a/ooch_bot/package.json
+++ b/ooch_bot/package.json
@@ -7,6 +7,7 @@
     "eslint": "^8.17.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.7",
+    "skia-canvas": "^1.0.1",
     "wait": "^0.4.2"
   },
   "compilerOptions": {
