Enums/Status Effects
Added vanished and doubled status effects
Added the ability Mundane
Added multiple enums for abilities/moves/types/items
Added an emote for doubled status effect
Added 20 new oochamon
Added many missing movesets
Added a couple new moves and new abilities (abilities not implemented yet)

--- a/ooch_bot/package.json
+++ b/ooch_bot/package.json
@@ -13,5 +13,8 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": false
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
