Setup generate to make emotes

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ ooch_bot/config.json
 ooch_bot/package-lock.json
 ooch_bot/package.json
 ooch_bot/.DS_Store
+ooch_bot/.DS_Store
+ooch_bot/Art/.DS_Store
+ooch_bot/Art/TileNPCs/.DS_Store
