--- a/ooch_bot/package.json
+++ b/ooch_bot/package.json
@@ -3,6 +3,7 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.25.2",
     "discord.js": "^14.16.3",
+    "dotenv": "^16.4.5",
     "enmap": "^5.9.8",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.7",
