Stance ai changes and some other stuff
`New:`
- Added new NPC/Oochamon icons for enemy turns that aren't part of proper battles

`Changes:`
- Rebalanced shop prices
- Added the ability for NPCs to use stance if they are smart NPCs.
- Changed shops to work better and show special items first.

--- a/ooch_bot/package.json
+++ b/ooch_bot/package.json
@@ -16,6 +16,10 @@
     "allowJs": true,
     "checkJs": false
   },
+  "scripts": {
+    "start": "node .",
+    "start_playtest": "./win_start.bat"
+  },
   "devDependencies": {
     "typescript": "^5.2.2"
   }
