--- a/ooch_bot/package.json
+++ b/ooch_bot/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "current-git-branch": "^2.0.1",
     "discord.js": "^14.21.0",
     "dotenv": "^16.6.1",
     "enmap": "^6.0.5",
